--- a/application.config.yml
+++ b/application.config.yml
@@ -7,8 +7,7 @@ spring:
           jwk-set-uri: http://localhost:8080/realms/realm-2/protocol/openid-connect/certs
   application:
     name: keycloak-admin-client
-server:
-  port: 8180
+
 keycloak:
   realm: realm-2
   resource: client11
@@ -30,9 +29,9 @@ springdoc:
 logging:
   level:
     org.springframework.web: debug
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+# eureka:
+#   client:
+#     register-with-eureka: true
+#     fetch-registry: true
+#     service-url:
+#       defaultZone: http://localhost:8761/eureka/
