--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,37 +1,31 @@
+server:
+  port: 8081
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
-      routes:
-        - id: task-service
-          uri:
-            http://localhost:8085
-          predicates:
-            - Path=/v3/api-docs/task-service, api/v1/**
-          filters:
-            - RewritePath=/v3/api-docs/task-service,/v3/api-docs, api/v1/**
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+            routes:
+              - id: task-service
+                uri:
+                  http://localhost:8085
+                predicates:
+                  - Path=/v3/api-docs/task-service, api/v1/**
+                filters:
+                  - RewritePath=/v3/api-docs/task-service,/v3/api-docs, api/v1/**
 
-        - id: keycloak-admin-client-docs
-          uri:
-            http://localhost:8181
-          predicates:
-              - Path=/v3/api-docs/keycloak-admin-client, api/v1/**
-          filters:
-              - RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
-  main:
-    web-application-type: reactive
-server:
-  port: 8084
+              - id: keycloak-admin-client-docs
+                uri:
+                  http://localhost:8181
+                predicates:
+                    - Path=/v3/api-docs/keycloak-admin-client, api/v1/**
+                filters:
+                    - RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
+  springdoc:
+    swagger-ui:
+      path: /swagger-ui/index.html
 
-logging:
-  level:
-    root: info
-    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
-    org.springframework.cloud: TRACE
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
