--- a/application-dev.yml
+++ b/application-dev.yml
@@ -11,3 +11,6 @@ springdoc:
   swagger-ui:
     tags-sorter: alpha
     doc-expansion: false
+loggin : 
+  level : 
+    org.springframework.web: debug
