--- a/keycloak-admin-client.yml
+++ b/keycloak-admin-client.yml
@@ -2,5 +2,30 @@ server:
   port: 8083
 spring:
   application:
-    name:
-      name: keycloak-admin-client
+    name : keycloak-admin-client
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/realm-2
+          jwk-set-uri: http://localhost:8080/realms/realm-2/protocol/openid-connect/certs
+  application:
+    name: keycloak-admin-client
+
+keycloak:
+  realm: realm-2
+  resource: client11
+  auth-server-url: http://localhost:8080/
+  credentials:
+    username: 'Viseth'
+    password: 'Vi-222777'
+    client-id: client11
+    secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
+    provider: secret
+#config swagger
+springdoc:
+  swagger-ui:
+    oauth:
+      client-id: client11
+      client-secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
+      realm: realm-2
