--- a/keycloak-admin-client.yml
+++ b/keycloak-admin-client.yml
@@ -1,18 +1,17 @@
-server:
-  port: 9092
-spring:
-  application:
-    name : keycloak-admin-client
   security:
     oauth2:
       resource-server:
         jwt:
           issuer-uri: http://localhost:8080/realms/realm-2
           jwk-set-uri: http://localhost:8080/realms/realm-2/protocol/openid-connect/certs
-
+  application:
+    name: keycloak-admin-client
+server:
+  port: 8181
 keycloak:
   realm: realm-2
   resource: client11
+#  auth-server-url: http://localhost:8080/auth/ #docker container
   auth-server-url: http://localhost:8080/
   credentials:
     username: 'Viseth'
@@ -20,6 +19,23 @@ keycloak:
     client-id: client11
     secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
     provider: secret
+#config swagger
+springdoc:
+  swagger-ui:
+    oauth:
+      client-id: client11
+      client-secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
+      realm: realm-2
+    tags-sorter: alpha
+logging:
+  level:
+    org.springframework.web: debug
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 #config swagger
 springdoc:
   swagger-ui:
