--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,28 +1,37 @@
-server:
-  port: 8081
 spring:
-  main:
-    web-application-type: reactive
   application:
     name: api-gateway
   cloud:
     gateway:
       routes:
         - id: task-service
-          uri: 
-            http://localhost:9095
+          uri:
+            lb://task-service
           predicates:
-            - Path=/v3/api-docs/task-service, api/v1/**
-          filters:
-            - RewritePath=/v3/api-docs/task-service,/v3/api-docs, api/v1/**
+            - Path=/api/v1/task/**, v3/api-docs/task
         - id: keycloak-admin-client-docs
           uri:
-            http://localhost:9092
+            http://localhost:8181
           predicates:
               - Path=/v3/api-docs/keycloak-admin-client, api/v1/**
-          filters:
-              - RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
-  springdoc:
-    swagger-ui:
-      path: /swagger-ui/index.html
+          #filters:
+             #- RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
 
+  main:
+    web-application-type: reactive
+
+
+server:
+  port: 8084
+
+logging:
+  level:
+    root: info
+    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
+    org.springframework.cloud: TRACE
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
