--- a/keycloak-admin-client.yml
+++ b/keycloak-admin-client.yml
@@ -1,3 +1,4 @@
+spring:
   security:
     oauth2:
       resource-server:
@@ -36,10 +37,3 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
-#config swagger
-springdoc:
-  swagger-ui:
-    oauth:
-      client-id: client11
-      client-secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
-      realm: realm-2
