--- a/task-service.yml
+++ b/task-service.yml
@@ -18,6 +18,36 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      kanyeClient:
+        recordExceptions:
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+        slidingWindowSize: 5
+        failureRateThreshold: 25
+        slowCallRateThreshold: 25 
+        slowCallDurationThreshold: 2s
+        waitDurationInOpenState: 10s
+        permittedNumberOfCallsInHalfOpenState: 3
+        minimumNumberOfCalls: 5
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, circuitbreakers
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+
 server:
   port: 8081
 
