--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -5,17 +5,17 @@ spring:
     gateway:
       routes:
         - id: task-service
-          uri:
-            lb://task-service
+          uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/task/**, v3/api-docs/task
+            - Path=/v3/api-docs/task-service, api/v1/**
+          filters:
+            - RewritePath=/v3/api-docs/task-service,/v3/api-docs, api/v1/**
         - id: keycloak-admin-client-docs
-          uri:
-            http://localhost:8181
+          uri: http://localhost:8181
           predicates:
-              - Path=/v3/api-docs/keycloak-admin-client, api/v1/**
-          #filters:
-             #- RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
+            - Path=/v3/api-docs/keycloak-admin-client, api/v1/**
+          filters:
+            - RewritePath=/v3/api-docs/keycloak-admin-client,/v3/api-docs, api/v1/**
 
   main:
     web-application-type: reactive
@@ -25,10 +25,10 @@ server:
   port: 8084
 
 logging:
-  level:
-    root: info
-    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
-    org.springframework.cloud: TRACE
+    level:
+      root: info
+      org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
+      org.springframework.cloud: TRACE
 eureka:
   client:
     register-with-eureka: true
