--- a/task-service.yml
+++ b/task-service.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: task-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/task_db
+    url: jdbc:postgresql://localhost:5432/task-service
     username: postgres
     password: database09
     driver-class-name: org.postgresql.Driver
@@ -50,21 +50,3 @@ eureka:
 
 server:
   port: 8081
-
-keycloak:
-  realm: realm-2
-  resource: client11
-  auth-server-url: http://localhost:8080/
-  credentials:
-    username: 'Viseth'
-    password: 'Vi-222777'
-    client-id: client11
-    secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
-    provider: secret
-#config swagger
-springdoc:
-  swagger-ui:
-    oauth:
-      client-id: client11
-      client-secret: 6scaeZzZ24UTDFDTPqrche49u8ud5GPP
-      realm: realm-2
